--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/x-icon" href="/Favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Portfolio of Ehsan Ashrafipour as a Full Stack Application Developer">
+  <link rel="icon" type="image/x-icon" href="/Favicon.ico" />
   <title>EhsanAsh Portfolio</title>
 </head>
 
