--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Portfolio of Ehsan Ashrafipour as a Full Stack Application Developer">
   <link rel="icon" type="image/x-icon" href="/Favicon.ico" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Josefin+Slab&family=Montserrat:wght@300&family=Roboto:wght@300&family=Rubik+Doodle+Shadow&display=swap"
+    rel="stylesheet">
   <title>EhsanAsh Portfolio</title>
 </head>
 
