--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@100..700&family=Montserrat:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik+Doodle+Shadow&display=swap"
     rel="stylesheet">
+  <script src="https://kit.fontawesome.com/e8db583555.js" crossorigin="anonymous"></script>
   <title>EhsanAsh Portfolio</title>
 </head>
 
